# identification

./: CMakeLists.txt  README.md  package.xml
data/map/: readme.txt
launch/: identify.launch  indentification.rviz  map.launch  rviz.launch
src/: identify.cpp  map_recorder.cpp
